--- a/webserver/composer.json
+++ b/webserver/composer.json
@@ -6,8 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "inertiajs/inertia-laravel": "2.x-dev",
+        "laravel/cashier": "^15.5",
         "laravel/framework": "^11.9",
-        "laravel/passport": "^12.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "predis/predis": "^2.2"
     },
