--- a/webserver/package.json
+++ b/webserver/package.json
@@ -6,8 +6,17 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@babel/core": "^7.26.0",
+        "@babel/preset-react": "^7.26.3",
+        "@rollup/plugin-babel": "^6.0.4",
+        "@vitejs/plugin-react": "^4.3.4",
         "axios": "^1.7.4",
-        "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+        "laravel-vite-plugin": "^1.1.1",
+        "vite": "^5.4.11"
+    },
+    "dependencies": {
+        "@inertiajs/react": "^2.0.0-beta.3",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     }
 }
