--- a/webserver/package.json
+++ b/webserver/package.json
@@ -10,12 +10,16 @@
         "@babel/preset-react": "^7.26.3",
         "@rollup/plugin-babel": "^6.0.4",
         "@vitejs/plugin-react": "^4.3.4",
+        "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.1.1",
+        "postcss": "^8.5.3",
+        "tailwindcss": "^4.0.8",
         "vite": "^5.4.11"
     },
     "dependencies": {
         "@inertiajs/react": "^2.0.0-beta.3",
+        "@tailwindcss/vite": "^4.0.8",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     }
